[package]
name = "conec"
version = "0.0.1"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "COordinated NEtwork Channels"
license = "Apache-2.0"
repository = "https://github.com/kwantam/conec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
quinn = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2"
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.3", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0"
directories-next = "1.0"
rcgen = "0.8"
unwrap = "1.2"
