[package]
name = "conec"
version = "0.0.5" # don't forget to change VERSION string in lib.rs
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "COordinated NEtwork Channels"
license = "Apache-2.0"
repository = "https://github.com/kwantam/conec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
err-derive = "0.2"
futures = "0.3"
quinn = "0.6"
rand = "0.7"
rcgen = "0.8"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-core"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.3", features = ["codec"] }
tracing = "0.1"
webpki = "0.21"

[dev-dependencies]
anyhow = "1.0"
directories-next = "1.0"
x509-signature = "0.5"
