[package]
name = "conec"
version = "0.0.10" # don't forget to change VERSION string in lib.rs
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "COordinated NEtwork Channels"
license = "Apache-2.0"
repository = "https://github.com/kwantam/conec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4"
bytes = "0.5"
ct-logs = "0.6"
err-derive = "0.2"
futures = "0.3"
quinn = "0.6"
rand = "0.7"
rcgen = "0.8"
rustls = { version = "0.17", features = ["quic", "dangerous_configuration"] }
rustls-native-certs = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-core", "time"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-util = { version = "0.3", features = ["codec"] }
tracing = "0.1"
webpki = "0.21"

[dev-dependencies]
anyhow = "1.0"
directories-next = "1.0"
rcgen = { version = "0.8", features = ["x509-parser"] }
